--- a/zonoapp/templates/pages/campaign/list_campaign.html
+++ b/zonoapp/templates/pages/campaign/list_campaign.html
@@ -10,7 +10,7 @@
     <!-- Search form -->
     <form method="GET" action="{% url 'manage_campaign' %}" style="display: flex; flex-direction: row; justify-content: flex-end;">
         <div class="form-group" style="margin-right: 0.5%;">
-            <input type="text" name="q" class="form-control" placeholder="Search campaigns" value="{{ search_query }}">
+            <input type="text" name="q" class="form-control" placeholder="Search Campaigns" value="{{ search_query }}">
         </div>
         <button type="submit" class="btn btn-primary">Search</button>
     </form>
