--- a/zonoapp/templates/pages/qa_parameters/qa_parameters.html
+++ b/zonoapp/templates/pages/qa_parameters/qa_parameters.html
@@ -8,7 +8,7 @@
 
 {% block content %}
 <!-- Add Parameter Button -->
-<button class="btn btn-primary-gradien" style="margin: 1%;" type="button" id="addParameterButton">Add Parameter</button>
+<button class="btn btn-primary" style="margin: 1%;" type="button" id="addParameterButton">Add Parameter</button>
 
 <!-- Edit Parameter Modal -->
 <div class="modal fade" id="editParameterModal" tabindex="-1" aria-labelledby="editParameterModalLabel" aria-hidden="true">
