--- a/zonoapp/templates/pages/user_management/add_user.html
+++ b/zonoapp/templates/pages/user_management/add_user.html
@@ -52,8 +52,11 @@
 </div>
 
     <!-- User Table (Visible by Default) -->
-     <div id="userTable">
-    <div class="card" id="userTable">
+    
+    <div id="userTable">
+        <div class="card">
+        <div class="card-header">
+        </div>
         <div class="card-block row">
             <div class="col-sm-12 col-lg-12 col-xl-12">
                 <div class="table-responsive custom-scrollbar">
@@ -97,39 +100,41 @@
             </div>
         </div>
     </div>
-    <div class="job-pagination">
-        <nav aria-label="Page navigation example">
-            <ul class="pagination pagination-primary">
-                {% if users.has_previous %}
-                <li class="page-item">
-                    <a class="page-link" href="?page={{ users.previous_page_number }}&q={{ search_query }}">Previous</a>
-                </li>
-                {% else %}
-                <li class="page-item disabled">
-                    <a class="page-link">Previous</a>
-                </li>
-                {% endif %}
 
-                {% for num in users.paginator.page_range %}
-                <li class="page-item {% if users.number == num %}active{% endif %}">
-                    <a class="page-link" href="?page={{ num }}&q={{ search_query }}">{{ num }}</a>
-                </li>
-                {% endfor %}
-
-                {% if users.has_next %}
-                <li class="page-item">
-                    <a class="page-link" href="?page={{ users.next_page_number }}&q={{ search_query }}">Next</a>
-                </li>
-                {% else %}
-                <li class="page-item disabled">
-                    <a class="page-link">Next</a>
-                </li>
-                {% endif %}
-            </ul>
-        </nav>
-    </div>
-</div>
-
+        <div>
+            <div class="job-pagination">
+                <nav aria-label="Page navigation example">
+                    <ul class="pagination pagination-primary">
+                        {% if users.has_previous %}
+                        <li class="page-item">
+                            <a class="page-link" href="?page={{ users.previous_page_number }}&q={{ search_query }}">Previous</a>
+                        </li>
+                        {% else %}
+                        <li class="page-item disabled">
+                            <a class="page-link">Previous</a>
+                        </li>
+                        {% endif %}
+        
+                        {% for num in users.paginator.page_range %}
+                        <li class="page-item {% if users.number == num %}active{% endif %}">
+                            <a class="page-link" href="?page={{ num }}&q={{ search_query }}">{{ num }}</a>
+                        </li>
+                        {% endfor %}
+        
+                        {% if users.has_next %}
+                        
+                        <li class="page-item">
+                            <a class="page-link" href="?page={{ users.next_page_number }}&q={{ search_query }}">Next</a>
+                        </li>
+                        {% else %}
+                        <li class="page-item disabled">
+                            <a class="page-link">Next</a>
+                        </li>
+                        {% endif %}
+                    </ul>
+                </nav>
+            </div>
+        </div>
 </div>
     
     <!-- User Form (Hidden Initially) -->
