--- a/zonoapp/templates/layout/header.html
+++ b/zonoapp/templates/layout/header.html
@@ -14,19 +14,19 @@
     </div>
     <form class="col-sm-4 form-inline search-full d-none d-xl-block" action="#" method="get">
       <div class="form-group">
-        <div class="Typeahead Typeahead--twitterUsers">
+        <!-- <div class="Typeahead Typeahead--twitterUsers">
           <div class="u-posRelative">
             <input class="demo-input Typeahead-input form-control-plaintext w-100" type="text" placeholder="Type to Search .." name="q" title="" autofocus>
             <svg class="search-bg svg-color">
               <use href="{% static 'assets/svg/icon-sprite.svg' %}#search"></use>
             </svg>
           </div>
-        </div>
+        </div> -->
       </div>
     </form>
     <div class="nav-right col-xl-8 col-lg-12 col-auto pull-right right-header p-0">
       <ul class="nav-menus">
-        <li class="serchinput">
+        <!-- <li class="serchinput">
           <div class="serchbox">
             <svg>
               <use href="{% static 'assets/svg/icon-sprite.svg' %}#search"></use>
@@ -35,7 +35,7 @@
           <div class="form-group search-form">
             <input type="text" placeholder="Search here...">
           </div>
-        </li>
+        </li> -->
         <li class="onhover-dropdown position-relative"> 
           <div class="notification-box">
             <svg> 
