--- a/zonoapp/templates/pages/campaign/create_campaign.html
+++ b/zonoapp/templates/pages/campaign/create_campaign.html
@@ -238,13 +238,43 @@
                   <div class="overflow-auto">
                     <div class="card-body social-list filter-cards-view">
                        
-                      <div class="d-flex"><img class="img-50 img-fluid m-r-20 rounded-circle" alt="" src="/zono/zonoapp/static/assets/images/user/3.jpg">
+                      <div class="d-flex"><div class="stroke-icon-wizard" style="font-size: 18px;
+                        color: var(--white);
+                        width: 40px;
+                        height: 40px;
+                        background-color: #2b5e5e;
+                        display: flex;
+                        justify-content: center;
+                        align-items: center;
+                        border-radius: 50%;
+                        margin-right: 2%;
+                        transition: all 0.3s ease-in-out"><i class="fa fa-user"></i></div>
                         <div class="flex-grow-1"><span class="d-block">Agent Library</span><a href="{% url 'agent_create' %}">Add or update Agent</a></div>
                       </div>
-                      <div class="d-flex"><img class="img-50 img-fluid m-r-20 rounded-circle" alt="" src="/zono/zonoapp/static/assets/images/user/10.jpg">
-                        <div class="flex-grow-1"><span class="d-block">Voice Library</span><a href=" ">Add or update Voice</a></div>
+                      <div class="d-flex"><div class="stroke-icon-wizard" style="font-size: 18px;
+                        color: var(--white);
+                        width: 40px;
+                        height: 40px;
+                        background-color: #2b5e5e;
+                        display: flex;
+                        justify-content: center;
+                        align-items: center;
+                        border-radius: 50%;
+                        margin-right: 2%;
+                        transition: all 0.3s ease-in-out"><i class="icofont icofont-megaphone"></i></div>
+                        <div class="flex-grow-1"><span class="d-block">Voice Library</span><a href="{% url 'voice_view' %} ">Add or update Voice</a></div>
                       </div>
-                      <div class="d-flex"><img class="img-50 img-fluid m-r-20 rounded-circle" alt="" src="/zono/zonoapp/static/assets/images/user/11.png">
+                      <div class="d-flex"><div class="stroke-icon-wizard" style="font-size: 18px;
+                        color: var(--white);
+                        width: 40px;
+                        height: 40px;
+                        background-color: #2b5e5e;
+                        display: flex;
+                        justify-content: center;
+                        align-items: center;
+                        border-radius: 50%;
+                        margin-right: 2%;
+                        transition: all 0.3s ease-in-out"><i class="icofont icofont-chart-pie"></i></div>
                         <div class="flex-grow-1"><span class="d-block">Manage Campaign</span><a href="{% url 'manage_campaign' %}">Update or Schedule Campaign</a></div>
                       </div>
                     </div>
