--- a/zonoapp/templates/layout/header.html
+++ b/zonoapp/templates/layout/header.html
@@ -36,6 +36,19 @@
             <input type="text" placeholder="Search here...">
           </div>
         </li> -->
+        <li class="message ">
+          <div class="credit-icon" style=" display: flex; flex-direction: row; height:3vh;">
+
+            <span class="text-center"> <i class="fa fa-dollar"></i> <b>Credits Balence</b><br> $ <strong
+                id="userCredit"> 0.00 </strong></span>
+            <div class="div-add-card">&nbsp;
+              <a href="{% url 'contact_sale' %}"> <button class="btn btn-primary d-flex justify-content-center align-items-center" type="button" style="width: 10px;height: 80%;">
+                <i class="fa fa-plus"></i> 
+              </button></a>
+
+            </div>
+          </div>
+        </li>
         <li class="onhover-dropdown position-relative"> 
           <div class="notification-box">
             <svg> 
