--- a/zonoapp/templates/layout/sidebar.html
+++ b/zonoapp/templates/layout/sidebar.html
@@ -257,7 +257,7 @@
           </li>
           {% endif %}
           
-          <li class="sidebar-main-title"></li>
+          <li class="sidebar-main-title">
             <div>
               <h6 class="lan-22">
                 Contact Sales
