--- a/zonoapp/templates/layout/sidebar.html
+++ b/zonoapp/templates/layout/sidebar.html
@@ -28,12 +28,12 @@
         </svg>
       </div>
     </div>
-    <div class="logo-icon-wrapper"><a href="/index"><img class="img-fluid" src="{% static 'assets/images/logo/logo-icon.png' %}" alt=""></a></div>
+    <div class="logo-icon-wrapper"><a href="/index"><img class="img-fluid for-light" src="{% static 'assets/images/logo/logo3.png' %}" alt=""><img class="img-fluid for-dark" src="{% static 'assets/images/logo/logo-icon.png' %}" alt=""></a></div>
     <nav class="sidebar-main">
       <div class="left-arrow" id="left-arrow"><i data-feather="arrow-left"></i></div>
       <div id="sidebar-menu">
         <ul class="sidebar-links" id="simple-bar">
-          <li class="back-btn"><a href="/index"><img class="img-fluid" src="{% static 'assets/images/logo/logo-icon.png' %}" alt=""></a>
+          <li class="back-btn"><a href="/index"><img class="img-fluid" src="{% static 'assets/images/logo-icon.png' %}" alt=""></a>
             <div class="mobile-back text-end"><span>Back</span><i class="fa fa-angle-right ps-2" aria-hidden="true"></i></div>
           </li>
           <li class="pin-title sidebar-main-title">
