Logo and Contact Ui fixed and download sample csv functionality added

--- a/zonoapp/templates/layout/sidebar.html
+++ b/zonoapp/templates/layout/sidebar.html
@@ -21,7 +21,7 @@
 <!-- Page Sidebar Start-->
 <div class="sidebar-wrapper" data-layout="stroke-svg">
   <div>
-    <div class="logo-wrapper"><a href="/index"> <img class="img-fluid for-light" src="{% static 'assets/images/logo/logo.png' %}" alt=""><img class="img-fluid for-dark" src="{% static 'assets/images/logo/logo_dark.png' %}" alt=""></a>
+    <div class="logo-wrapper" style=" padding: 2%; padding-left: 11%;"><a href="/index"> <img class="img-fluid for-light" src="{% static 'assets/images/logo/logo.png' %}" alt=""><img class="img-fluid for-dark" src="{% static 'assets/images/logo/logo_dark.png' %}" alt=""></a>
       <div class="toggle-sidebar">
         <svg class="sidebar-toggle"> 
           <use href="{% static 'assets/svg/icon-sprite.svg' %}#toggle-icon"></use>
