--- a/zonoapp/templates/layout/header.html
+++ b/zonoapp/templates/layout/header.html
@@ -97,10 +97,10 @@
             </div>
           </div>
           <ul class="profile-dropdown onhover-show-div">
-            <li><a href="/user_profile"><i data-feather="user"></i><span>Account </span></a></li>
+            <!-- <li><a href="/user_profile"><i data-feather="user"></i><span>Account </span></a></li>
             <li><a href="/letter_box"><i data-feather="mail"></i><span>Inbox</span></a></li>
-            <li><a href="/task"><i data-feather="file-text"></i><span>Taskboard</span></a></li>
-            <li><a href="/edit_profile"><i data-feather="settings"></i><span>Settings</span></a></li>
+            <li><a href="/task"><i data-feather="file-text"></i><span>Taskboard</span></a></li> -->
+            <li><a href="/contact_sale"><i data-feather="mail"></i><span>Contact Sales</span></a></li>
             <li><a href="/logout_view"> <i data-feather="log-in"></i><span>Log Out</span></a></li>
           </ul>
         </li>
